# rangebar-py

./: .gitignore  .mcp.json  .mise.toml  .pre-commit-config.yaml  .releaserc.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NEXT_STEPS.md  PHASES_7-9_COMPLETION_SUMMARY.md  PROJECT_SETUP.md  README.md  RESUME.md  STATISTICAL_VALIDITY_AUDIT.md  TODO.md  build.rs  deny.toml  index.html  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  rustfmt.toml  symbols.toml
.cargo/: config.local.example  config.toml
benches/: allocator_tuning_benchmark.rs  apen_simd_optimization_benchmark.rs  arrow_vs_dict_benchmark.rs  burstiness_simd_bench.rs  concurrent_streaming_bench.rs  core.rs  entropy_cache_comparison.rs  entropy_cache_trylock_benchmark.rs  feature_attribution_profiler.rs  hurst_early_exit_benchmark.rs  interbar_cache_benchmark.rs  interbar_feature_profiling.rs  intrabar_dual_pass_benchmark.rs  kyle_lambda_profiling.rs  normalization_lut_benchmark.rs  pe_threshold_tuning_benchmark.rs  profiling_analysis.rs  rangebar_bench.rs  streaming_latency_profiler.rs  tier1_optimization.rs  vecdeque_pruning_benchmark.rs  zero_copy_trade_snapshot_benchmark.rs
crates/: CLAUDE.md
crates/rangebar/: Cargo.toml  README.md
crates/rangebar-batch/: Cargo.toml  README.md
crates/rangebar-batch/src/: engine.rs  lib.rs
crates/rangebar-cli/: Cargo.toml  README.md
crates/rangebar-config/: Cargo.toml  README.md
crates/rangebar-config/src/: algorithm.rs  app.rs  data.rs  export.rs  lib.rs
crates/rangebar-core/: Cargo.toml  README.md
crates/rangebar-core/benches/: burstiness_simd_detail.rs  conversion_caching_benchmark.rs  cumulative_optimization_validation.rs  cumulative_performance_validation.rs  dynamic_parallelization_benchmark.rs  entropy_cache_warmup_benchmark.rs  entropy_simd_detail.rs  epsilon_branch_prediction_benchmark.rs  hurst_dfa_memoization_benchmark.rs  interbar_performance.rs  intrabar_early_exit_benchmark.rs  kyle_lambda_branchless_benchmark.rs  lookahead_binary_search_benchmark.rs  ofi_ilp_optimization_benchmark.rs  production_validation.rs  smallvec_profiling.rs  tier2_profiling.rs  tier3_profiling.rs  tier_breakdown_real_data.rs
crates/rangebar-core/data/: feature_manifest.toml
crates/rangebar-core/src/: arrow_export.rs  checkpoint.rs  entropy_cache_global.rs  errors.rs  export_processor.rs  fixed_point.rs  interbar.rs  interbar_cache.rs  interbar_math.rs  interbar_math_simd.rs  interbar_types.rs  lib.rs  processor.rs  test_data_loader.rs  timestamp.rs  trade.rs  types.rs
crates/rangebar-core/src/intrabar/: drawdown.rs  features.rs  ith.rs  mod.rs  normalization_lut.rs  normalize.rs  types.rs
crates/rangebar-core/src/test_utils/: generators.rs  mod.rs
crates/rangebar-core/tests/: arrow_export_tests.rs  cross_boundary_validation.rs  cross_date_real_data_validation.rs  cross_year_boundary_test.rs  incomplete_bar_continuation_proof.rs  intrabar_dual_pass_test.rs  microstructure_features_test.rs  monthly_ouroboros_test.rs  test_agg_trade_id_tracking.rs  tier3_features_test.rs  types_tests.rs
crates/rangebar-hurst/: Cargo.toml
crates/rangebar-hurst/src/: lib.rs  utils.rs
crates/rangebar-io/: CHANGELOG.md  Cargo.toml  README.md
crates/rangebar-io/src/: formats.rs  lib.rs  polars_io.rs
crates/rangebar-providers/: Cargo.toml  README.md
crates/rangebar-providers/src/: lib.rs
crates/rangebar-providers/src/binance/: checksum.rs  historical.rs  mod.rs  symbols.rs  websocket.rs
crates/rangebar-providers/src/exness/: builder.rs  client.rs  conversion.rs  mod.rs  types.rs
crates/rangebar-providers/tests/: fromid_integration.rs  rest_ws_junction_integration.rs
crates/rangebar-streaming/: Cargo.toml  README.md
crates/rangebar-streaming/src/: indicators.rs  lib.rs  live_engine.rs  processor.rs  replay_buffer.rs  ring_buffer.rs  stats.rs  universal.rs
crates/rangebar/src/: lib.rs
crates/rangebar/tests/: algorithm_invariants.rs  binance_btcusdt_real_data_test.rs  binance_ethusdt_real_data_test.rs  boundary_consistency_tests.rs  cross_year_speed_comparison.rs  exness_eurusd_integration_test.rs  exness_eurusd_statistical_analysis.rs  exness_multi_instrument_validation.rs  exness_proptest_invariants.proptest-regressions  exness_proptest_invariants.rs  exness_xauusd_integration_test.rs  integration_test.rs  large_boundary_tests.rs  multi_month_memory_tests.rs  production_streaming_validation.rs  version_sync.rs
crates/rangebar/tests/common/: mod.rs
crates/rangebar/tests/snapshots/: exness_xauusd_integration_test__xauusd_validation_summary.snap
deploy/: rangebar-sidecar.service  rangebar.env  sidecar.env
docs/: ARCHITECTURE.md  CONTEXT.md  DASHBOARD_FIX_SUMMARY.md  GITHUB_PAGES_SETUP.md  MEMORY_REMEDIATION_PLAN.md  PERFORMANCE.md  RELEASE_SETUP_GUIDE.md  api.md  migration-v8.md  rangebar_core_api.md
examples/: README.md  backtesting_integration.py  basic_usage.py  binance_csv_example.py  get_range_bars_example.py  validate_output.py  with_clickhouse_cache.py
scripts/: .api_surface_baseline.json  CLAUDE.md  adwin_regime_detection_polars.py  analyze_flash_crash.py  backfill_watcher.py  benchmark_apen_vs_pent.py  benchmark_arrow_export.py  benchmark_cache_pipeline.py  benchmark_comprehensive.py  benchmark_reset_index_optimization.py  benchmark_smallvec_optimization.py  bootstrap_permutation_validation_polars.py  btc250_backfill.sh  build-release.sh  cache_clear.py  cache_status.py  check-release-config.sh  cleanup_extra_symbols.py  cleanup_oversized_bars.py  coarse_to_fine_cascade.py  combined_pattern_audit_polars.py  combined_regime_analysis_polars.py  combined_rv_alignment_analysis_polars.py  cross_asset_correlation_polars.py  cross_regime_correlation_polars.py  cross_threshold_alignment.py  deduplicate_parquet_cache.py  dependency_monitor.sh  detect_gaps.py  detect_volume_overflow.py  direction_patterns_reaudit.py  download_exness_eurusd.py  download_exness_forex.py  duration_autocorrelation.py  fdr_corrected_patterns.py  (+117 more)
tools/chart/: .mise.toml  Cargo.toml
tools/chart/src/: main.rs
(+264 files in other folders)
