[package]
name = "rangebar-py"
version = "5.3.4"
edition = "2021"
authors = ["Terry Li"]
license = "MIT"
description = "Python bindings for rangebar: Non-lookahead range bar construction"
repository = "https://github.com/terrylica/rangebar-py"
readme = "README.md"

[lib]
name = "rangebar_py"  # Renamed to avoid conflict with upstream rangebar-core
crate-type = ["cdylib"]  # Python extension module only

[dependencies]
# Import rangebar-core from crates.io (ZERO changes to upstream)
# Note: The dependency name uses hyphens, resolved as rangebar_core in Rust code
# v6.1.0: Adds Checkpoint API for cross-file range bar continuation
rangebar-core = "6.1"

# Data providers: Binance (crypto) + Exness (forex)
# all-providers feature enables both data sources
rangebar-providers = { version = "6.1", optional = true, features = ["all-providers"] }

# Async runtime for data fetching
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Default features: Include data-providers so PyPI users get the full API
# (get_range_bars with automatic data fetching)
default = ["data-providers"]
# Enable data fetching from all providers (Binance + Exness)
data-providers = ["rangebar-providers", "tokio"]
# Legacy feature aliases
exness = ["data-providers"]
binance = ["data-providers"]

[build-dependencies]
pyo3-build-config = "0.22"

[lints.clippy]
# Lint group priority: lower number = lower priority (applied first)
# Individual lints can override groups with default priority (0)
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow certain lints that conflict with project style or PyO3 patterns
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"  # PyO3 requires owned values for Python bindings
useless_conversion = "allow"  # PyO3 error handling patterns
upper_case_acronyms = "allow"  # Forex pairs use industry standard names (EURUSD, GBPUSD)
trivially_copy_pass_by_ref = "allow"  # PyO3 enum patterns
similar_names = "allow"  # ask/agg patterns in finance
cast_possible_truncation = "allow"  # Known-safe timestamp conversions
cast_sign_loss = "allow"  # Known-safe timestamp conversions
cast_precision_loss = "allow"  # Known-safe f64 timestamp conversions
cast_possible_wrap = "allow"  # index to i64 is safe within bounds
wildcard_imports = "allow"  # Module-level use super::* is idiomatic
use_self = "allow"  # Explicit type names in match arms for clarity
doc_markdown = "allow"  # Allow plain technical terms in docs
return_self_not_must_use = "allow"  # Builder pattern returns
