[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rangebar"
version = "7.1.0"
description = "Python bindings for rangebar: Non-lookahead range bar construction for cryptocurrency trading"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Terry Li" }
]
keywords = ["trading", "cryptocurrency", "range-bars", "backtesting", "technical-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "polars>=1.0",              # Parquet I/O for Tier 1 cache
    "pyarrow>=14.0",            # Required by polars for to_pandas() conversion
    "platformdirs>=4.0",        # Cross-platform cache directory
    "clickhouse-connect>=0.8",  # ClickHouse cache layer (Tier 2)
]

[project.optional-dependencies]
backtesting = ["backtesting>=0.3"]
exness = []  # Feature flag handled at Rust build level (maturin --features exness)
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Repository = "https://github.com/terrylica/rangebar-py"
Documentation = "https://github.com/terrylica/rangebar-py#readme"
"Upstream (Rust)" = "https://github.com/terrylica/rangebar"

[tool.maturin]
python-source = "python"
module-name = "rangebar._core"
# Include data-providers for full API (get_range_bars with automatic data fetching)
# This is now default in Cargo.toml, but explicit here for documentation
features = ["pyo3/extension-module", "data-providers"]
# Force optimized wheel profile (see Cargo.toml [profile.wheel])
profile = "wheel"
# Strip symbols to minimize wheel size
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "clickhouse: marks tests requiring ClickHouse (deselect with '-m \"not clickhouse\"')",
]

[tool.coverage.run]
source = ["python/rangebar"]
omit = ["tests/*", "python/rangebar/__init__.pyi"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PD",   # pandas-vet
    "PL",   # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy-specific rules
    "RUF",  # ruff-specific rules
]
ignore = [
    # ANN101/ANN102 removed in ruff 0.9+
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation
    "ANN401",  # Using Any type
    "ARG002",  # Unused method argument (common in fixtures)
    "PLR2004", # Magic value in comparison
    "NPY002",  # Legacy numpy random
    "PD901",   # Generic variable name 'df'
    "F841",    # Unused variable (common in mock tests)
    "RET504",  # Unnecessary assignment before return
    "SIM117",  # Nested with statements
    "E501",    # Line too long (test output messages can be verbose)
    "B007",    # Loop control variable not used (common in iterrows)
]
"examples/*" = [
    "PD901",   # Generic variable name 'df'
    "NPY002",  # Legacy numpy random
    "PLR2004", # Magic value
    "PLR0915", # Too many statements
    "TRY300",  # Consider moving to else block
    "B904",    # Within except clause, raise with from
    "E501",    # Line too long (examples can be verbose)
]
"python/rangebar/__init__.pyi" = [
    "PYI021",  # Docstrings in stubs (kept for documentation)
    "PYI034",  # Self return type (intentional RangeBarCache return)
    "E501",    # Line too long (docstring examples)
]
"python/rangebar/__init__.py" = [
    "F821",    # Forward references for type hints
    "SIM108",  # Ternary operator (readability preference)
    "PLC0415", # Lazy imports for optional ClickHouse dependencies
    "PLR0912", # Too many branches (get_range_bars is comprehensive)
    "PLR0913", # Too many arguments (get_range_bars exposes full API)
    "PLR0915", # Too many statements (get_range_bars is entry point)
    "F401",    # Unused imports (polars used for type hints)
    "PD901",   # Generic variable name 'df'
    "TRY300",  # Consider moving to else block
    "E501",    # Line too long (docstring examples)
]
"python/rangebar/clickhouse/*.py" = [
    "PD901",   # Generic variable name 'df' (common in data processing)
    "RET504",  # Unnecessary assignment before return
    "TRY300",  # Consider moving to else block
    "PLW2901", # Loop variable overwritten
    "ANN401",  # Any type in kwargs
    "PYI034",  # Self return type
    "PLR2004", # Magic values (port numbers, etc.)
    "PLC0415", # Lazy imports for optional dependencies
]
"python/rangebar/exness.py" = [
    "PD901",   # Generic variable name 'df'
    "ANN401",  # Any type in kwargs
    "F821",    # Forward references (ExnessInstrument placeholders)
    "PLC0415", # Import in function (needed for optional imports)
    "RET504",  # Unnecessary assignment before return (readability preference)
]
"scripts/*" = [
    "E501",    # Line too long (scripts can be verbose)
    "PLR2004", # Magic values (common in scripts)
    "TRY300",  # Consider moving to else block
    "ANN001",  # Missing type annotation
    "ANN201",  # Missing return type annotation
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "Cargo.toml:package.version"
]
build_command = "pip install build && python -m build --sdist"
commit_parser = "conventional"
tag_format = "v{version}"
allow_zero_version = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[dependency-groups]
dev = [
    "psutil>=7.2.1",
    "pytest-cov>=7.0.0",
]
